[project]
name = "real-esrgan-mlx"
version = "0.1.0"
description = "Real-ESRGAN on Apple Silicon. Pure MLX, no PyTorch at runtime."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.22.0",
    "pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
convert = ["torch>=2.0"]

[project.scripts]
real-esrgan-mlx = "upscale:main"
